# C-and-CPP

./: .gitignore  Readme.md  upd.sh
C/: a  a.c  xxx
C/learn_IO/: 1dup.c  readme.md
C/learn_Syslib_limit/: exary.c  extime.c  test.c
C/learn_cgroup/lib_cgroup/: a.c
C/learn_cgroup/test_code/: create_cgroup.c  out_memory.c
C/learn_fifo/: read.c
C/learn_mkdir/: mkdir.c
C/static_test/: a.out  kk2.c
C/test/: b.c
C/thread/: 1.c  2.cpp
CPP/: README.MD
CPP/constractor/: t1.cpp
CPP/inheritance/: LibMat.cpp  t1.cpp  test.cpp
CPP/operator/: t1.cpp
CPP/polymorphism/: LibMat.cpp  t1.cpp
CPP/reference/: t1.cpp
Judge/: Readme.md
Judge/0.0.1/: test  test.cpp
Judge/0.0.2/: core  core.c  core.config  judge_diffchar.c  read_config.h  usr_code.c
Judge/0.0.2/test_data/0001/: test-config
Judge/0.0.3/code/: manage_cgroup.h  read_config.h  test.c
Judge/0.0.3/code/test_read/: cg_test.c  cgroup.config  test_cg.c
Judge/0.0.3/judge_data/0001/: test.config
Judge/0.0.3/judge_data/0001/user_code/: test_ac.c
Judge/0.0.3/test_data/0001/: test-config
Judge/1.0/: judge  judge.c  judge.properties
Judge/cgroup_learn/test_code/: out_memory.c
Judge/docker/: readme.md
Judge/fifo_learn/: write.c
Judge/使用的库/: readme.md
Judge/使用的库/内存类/: Readme.md
Judge/使用的库/时间类/: readme.md
linux_c/: 1.c
pgmer_con/: 1  gen  gen.cpp  lan1.cpp  sosdp.cpp
pgmer_con/lanqCont12-9/: 6lan.cpp  lan3.cpp  lan4.cpp  lan5.cpp
pgmer_con/test-12-10[shi]/: 1  A.cpp  B.cpp  C.cpp  D.cpp
project/CMakeLearn/Step5/: CMakeLists.txt
project/CMakeLearn/Step5/MathFunctions/: CMakeLists.txt
project/CMakeLearn/dome_1/: CMakeLists.txt  dome.cpp
project/CMakeLearn/dome_2/: CMakeLists.txt  dome.cpp
project/CMakeLearn/dome_2/myfunc/: CMakeLists.txt  myfunc.cpp  pow.cpp
project/CMakeLearn/dome_3/: CMakeLists.txt
project/CMakeLearn/dome_3/myfunc/: pow.hpp
project/CMakeLearn/dome_4/: CMakeLists.txt  dome.cpp
project/CMakeLearn/dome_4/myfunc/: CMakeLists.txt  myfunc.cpp  myfunc.hpp
project/dome/: CMakeLists.txt  dome.cpp
some_tx/C/learn_IO/: 2  2dup.cpp
some_tx/C/learn_Syslib_limit/: disable_test.c  exmemory.c  exreturn.c  limit.c
some_tx/C/learn_cgroup/: readme.md  wirtepeak.c
some_tx/C/learn_cgroup/test_code/: test_return_val.c
some_tx/C/static_test/: a.h  b.c  kk1.c
some_tx/C/test/: test_static.c
some_tx/C/thread/: 1  2
some_tx/CPP/Class-some/: tmpClass.cpp
some_tx/CPP/IO/: tmp.cpp
some_tx/CPP/const/: t1.cpp
some_tx/CPP/delete/: dell.cpp
some_tx/CPP/inheritance/: vritual-del.cpp
some_tx/Judge/: Readme.md
some_tx/Judge/0.0.1/: judge.c  pipitest.c
some_tx/Judge/0.0.2/: core.c  core.config  read_config.h
some_tx/Judge/0.0.3/code/: judge_compile.h  judge_core.c  read_config.h  test.c
some_tx/Judge/0.0.3/code/compile_test/: cp_test.c
some_tx/Judge/0.0.3/code/test_read/: test.config
some_tx/Judge/学习笔记/: readme.md
some_tx/linux_c/: fun_point.cpp  point.cpp
